force-app/main/default/objects/HCM_Monthly_Salary_Deduction__c/HCM_Monthly_Salary_Deduction__c.object-meta.xml
<CustomObject>
    <label>HCM Monthly Salary Deduction</label>
    <nameField>
        <displayFormat>HCM_SD -{0000}</displayFormat>
        <label>HCM Monthly Salary Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCM Monthly Salary Deductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>