force-app/main/default/objects/HCM_Monthly_Salary_Deduction__c/fields/Actual_Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Deduction_Amount__c</fullName>
    <label>Actual Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>