force-app/main/default/objects/HCM_Monthly_Salary_Deduction__c/fields/Current_Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Deduction_Amount__c</fullName>
    <label>Current Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>