force-app/main/default/objects/HCM_Monthly_Salary_Deduction__c/fields/Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month__c</fullName>
    <label>Fiscal Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>