force-app/main/default/objects/HCM_Monthly_Salary_Deduction__c/fields/HCM_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>HCM_Record_Id__c</fullName>
    <label>HCM Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>