force-app/main/default/objects/HCM_Monthly_Salary_Deduction__c/fields/REVA_Hostel_Request__c.field-meta.xml
<CustomField>
    <fullName>REVA_Hostel_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REVA Hostel Request</label>
    <referenceTo>Reva_Hostel_Request__c</referenceTo>
    <relationshipLabel>HCM Monthly Salary Deductions</relationshipLabel>
    <relationshipName>HCM_Monthly_Salary_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>