force-app/main/default/objects/HCM_Monthly_Salary_Deduction__c/fields/Staff_Quarters_Request__c.field-meta.xml
<CustomField>
    <fullName>Staff_Quarters_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Quarters Request</label>
    <referenceTo>Staff_Quarters_Request__c</referenceTo>
    <relationshipLabel>HCM Monthly Salary Deductions</relationshipLabel>
    <relationshipName>HCM_Monthly_Salary_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>